# OPCC-CMake

./: .gitignore  CMakeLists.txt  Main.cpp
src/: ByteConverter.cpp  ByteConverter.hpp  CMakeLists.txt  ISink.hpp  Main.cpp
src/Converter/: ByteConverter.cpp  ByteConverter.hpp  CMakeLists.txt  IByteConverter.hpp  IConverter.hpp  ISource.hpp
src/Converter/ByteReader/: IByteReader.hpp
src/Converter/Processing/: IProcessing.hpp  IThreadedProcessing.hpp
src/Converter/Sink/: ISink.hpp
src/Converter/SourceReader/: ISource.hpp
tests/: CMakeLists.txt
tests/maintest/: CMakeLists.txt  MockByteConverter.hpp  TestByteConverter.cpp  TestByteConverter.hpp
